# ut_sdk_cpp

./: .clang-format  .gitignore  readme.md
example/: CMakeLists.txt
example/adra/: CMakeLists.txt  demo10_motion_cvel.cpp  demo11_cal_test.cpp  demo1_motion_position.cpp  demo2_motion_velocity.cpp  demo3_motion_current.cpp  demo3_motion_torque.cpp  demo4_get_param.cpp  demo5_motion_cpos.cpp  demo6_motion_ctau.cpp  demo7_motion_cpostau.cpp  demo8_motion_cposvel.cpp  demo9_motion_cpvt.cpp
example/datalink/: CMakeLists.txt  demo1_datalink_rs485.cpp  demo2_datalink_can.cpp
example/utra/: CMakeLists.txt  demo01_report.cpp  demo02_get_param.cpp  demo03_motion_joint_space_p2p.cpp  demo03_motion_p2p.cpp  demo04_motion_linear.cpp  demo04_motion_tool_space_line.cpp  demo05_motion_linear_blending.cpp  demo05_motion_tool_space_lineb.cpp  demo06_motion_circle.cpp  demo06_motion_tool_space_arc.cpp  demo08_motion_servo.cpp  demo08_motion_servo_joint.cpp  demo09_motion_p2pb.cpp  demo103_debug_code.cpp  demo104_debug.cpp  demo21_flxie2_get_param.cpp  demo22_flxie2_motion_now.cpp  demo23_flxie2_motion_que.cpp  demo24_flxiv_get_param.cpp  demo25_flxiv_motion_now.cpp  demo26_flxiv_motion_que.cpp  demo2_get_param.cpp  demo31_rs485_pass_now.cpp  demo32_rs485_pass_que.cpp  demo3_motion_joint_space_p2p.cpp
utapi/: CMakeLists.txt
utapi/adra/: adra_api_base.cpp  adra_api_base.h  adra_api_serial.cpp  adra_api_tcp.h  adra_api_udp.h
utapi/base/: arm_api_base.cpp  arm_api_base.h  arm_reg.h  arm_report_config.cpp  arm_report_status.cpp  arm_report_status.h  servo_api_base.cpp  servo_api_base.h  servo_reg.h
utapi/common/: hex_data.h  periodic_rt.h  socket.h  socket_serial.cpp  socket_serial.h  socket_tcp.cpp  socket_tcp.h  socket_udp.cpp  socket_udp.h  utcc_t.h  utrc_t.h
utapi/datalink/: datalink_api_can.h  datalink_api_rs485.h
utapi/utra/: readme.md  utra_api_tcp.cpp  utra_flxie_api.cpp  utra_flxie_api.h  utra_report_status.cpp  utra_report_status.h
